RESOLVED FIXED170490
Air::eliminateDeadCode should not repeatedly process the same live instructions
https://bugs.webkit.org/show_bug.cgi?id=170490
Summary Air::eliminateDeadCode should not repeatedly process the same live instructions
Filip Pizlo
Reported 2017-04-04 20:07:35 PDT
Patch forthcoming.
Attachments
the patch (4.40 KB, patch)
2017-04-04 20:09 PDT, Filip Pizlo
keith_miller: review+
Filip Pizlo
Comment 1 2017-04-04 20:09:52 PDT
Created attachment 306239 [details] the patch
Keith Miller
Comment 2 2017-04-04 20:38:00 PDT
Comment on attachment 306239 [details] the patch r=me.
Filip Pizlo
Comment 3 2017-04-04 20:44:05 PDT
Note You need to log in before you can comment on or make changes to this bug.